--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
         <h1>Intergalactic Space Cat Registry</h1>
         <input id="search" type="text" ng-model="query" />
         <select ng-model="orderProp">
-          <option name="name">Alphabetical</option>
-          <option name="-planets">Planets Visited</option>
+          <option value="name">Alphabetical</option>
+          <option value="-planets">Planets Visited</option>
         </select>
       </div>
       <div class="cat-container container">
